# basedboard

./: Cargo.toml
page/: index.html  static_index.html  style.css
src/: main.rs  site.rs  utils.rs
src/site/: chat.rs  index.rs  utils.rs
templates/: index.hbs  index.html.hbs
