[package]
name = "board3x100"
version = "0.1.5"
edition = "2021"
author = ["gegake"]


[dependencies]
rocket = "0.4.10"
rocket_contrib = {version = "0.4.10", features = ["handlebars_templates"]}
rocket-basicauth = "2"
serde = { version = "1", features = ["derive"] }

chrono = "*"
colored = {git = "https://github.com/mackwic/colored"}
log = "*"

include_dir = "0.7.2"

rand = "*"